	* added NEW_DESCRIBEPLACE to give more DescribePlace options
	* added WhatsIn replacement and ListObjects RLibMessage-call for more printing options
	* updated CenterTitle to not draw extra window in simple, non-Glk terps
	* Fixed some places in the supercontainer class that didn't work right with transparent supercontainers.
v 3.1 - * Added Supercontainer object class code. #set USE_SUPERCONTAINER to include.
	* Added NEW_FUSE code
	* fixed ClearArray memory-hogging bug
	* tweaked PrintStatusLine code to not loop when there is only one printstatuslib child
	* SetUpDirectionObjects isn't run so often
v 3.0 - * Changed some DoGo code and grammar to allow "go out/off of <object>"
	* Added "config_sys.h", a configuration file manager (helps games write data to one file instead of several). Sort of experimental but hopefully it's ready for release. Colorlib has been updated to use it, even if it's currently a bit ugly.
v 2.9 - * Added Object Sorting section to complement ListChildren routine
	* Fixed CalculateHolding bug
	* Fixed DoUnlock/DoLock. some messages weren't called correctly and now it makes sure that
	keys are available (and not in a closed box or something).
	* Added ability to string manipulation to write the results to a second array (instead
	of overwriting the original array)
	* Added optional NO_LOOK_TURNS flag to quickly allow games where DoLookAround, DoLook,
	DoLookIn, and DoLookThrough do not take a turn.
	* Added some object-picking code to extraroutines.hug to make it easier to pick 
	objects/elements from parents or arrays based on routine-based criteria
v 2.8 - * Made characters default to having exclude_from_all true
        * Added a ClearArray call to FindStatusHeight to prevent room from being printed twice
          in statustype-less games
        * Updated rdyshell to call flags.hug, switchgram.g, and inclusions.h
	* new "New Style Pronouns" and "Routine Grammar Helper" sections added